# ASSM-NeuralNetwork

./: CMakeLists.txt  README.md
bin_linux/: NeuralNetwork
src/: Generator.cpp  Generator.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  WAV.cpp  WAV.h  _kiss_fft_guts.h  main.cpp  stdafx.cpp  stdafx.h
